redhat-director-scripts/monitoring-openshift/openstack_exporter/openstack-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openstack-exporter
  namespace: trilio-monitoring
  labels:
    app: openstack-exporter
spec:
  selector:
    app: openstack-exporter
  ports:
    - name: os-metrics
      port: 9180
      targetPort: 9180
      protocol: TCP
